@@ -1,5 +1,6 @@
 v7.2
 -----
+: Fixed badge page sorting options to work with pagination
 : Fixed a bug that caused coupon messages not to display properly
 : Fixed a bug that caused the account total spent feature not to work correctly
 : Fixed a bug that caused the badges page functions not to work correctly
